fixed bug with mobile view caused by background image being too wide and modified styling of highlighted text

--- a/public/main.css
+++ b/public/main.css
@@ -35,6 +35,7 @@ nav {
     top: 0;
     height: 250px;
     width: 450px;
+    max-width: 100%;
     background: url('./images/sam-lake-louise.jpg');
     background-repeat: no-repeat;
     background-size: 100%;
@@ -312,6 +313,10 @@ footer {
 }
 
 /* General Text Emphasis Classes */
+
+.bold {
+    font-weight: bold;
+}
 
 .bigger {
     font-size: 24px;
